--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,16 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+.dropdown {
+    ion-item {
+        --background: var(--ion-color-dark-tint);
+        --color: var(--ion-color-light-shade);
+        ion-radio.radio-checked::part(mark) {
+          border-color: var(--ion-color-warning);
+        }
+    }
+    ion-item.item::part(native){
+        --inner-border-width: 0px;
+    }
+}
